--- a/Segundo Trabalho/docs/RELATORIO.tex
+++ b/Segundo Trabalho/docs/RELATORIO.tex
@@ -1,42 +1,117 @@
-\documentclass{article}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Estruturas Discretas - Segundo Trabalho
+% LaTeX File to convert into PDF
+% Final Version
+%
+% Original author:
+% Lucas Rodrigues - 1510848
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage[portuguese]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{graphicx}
-\usepackage{fancyvrb}
-\usepackage{fullpage}
+%----------------------------------------------------------------------------------------
+% PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
+\documentclass[paper=a4, fontsize=11pt]{scrartcl} % A4 paper and 11pt font size
 \usepackage{float}
-\usepackage{amsmath}
+\usepackage[T1]{fontenc} % Use 8-bit encoding that has 256 glyphs
+\usepackage{fourier} % Use the Adobe Utopia font for the document - comment this line to return to the LaTeX default
+\usepackage[portuguese]{babel} % Portuguese language/hyphenation
+\usepackage[utf8]{inputenc}
+\usepackage{amsmath,amsfonts,amsthm} % Math packages
+\usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
+\usepackage{sectsty} % Allows customizing section commands
+\allsectionsfont{\centering\normalfont\scshape} % Make all sections centered, the default font and small caps
+
+\usepackage{fancyhdr} % Custom headers and footers
+\pagestyle{fancyplain} % Makes all pages in the document conform to the custom headers and footers
+\fancyhead{} % No page header - if you want one, create it in the same way as the footers below
+\fancyfoot[L]{} % Empty left footer
+\fancyfoot[C]{} % Empty center footer
+\fancyfoot[R]{\thepage} % Page numbering for right footer
+
+\renewcommand{\headrulewidth}{0pt} % Remove header underlines
+\renewcommand{\footrulewidth}{0pt} % Remove footer underlines
+\setlength{\headheight}{13.6pt} % Customize the height of the header
+\numberwithin{equation}{section} % Number equations within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
+\numberwithin{figure}{section} % Number figures within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
+\numberwithin{table}{section} % Number tables within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
+\setlength\parindent{0pt} % Removes all indentation from paragraphs - comment this line for an assignment with lots of text
+
+\usepackage{listings} % Put lists to place python code
 \usepackage{color}
-\usepackage{spverbatim}
-
-
-\definecolor{ogreen}{RGB}{60,128,49}
-
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+ 
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+ 
+\lstset{style=mystyle}
 \restylefloat{table}
 
-\title{%
-  Estruturas Discretas - Segundo Trabalho\\
-  \large Prof. Marcus Vinicius S. Poggi de Aragão\\
-  Período de 2017.1}
+%----------------------------------------------------------------------------------------
+% TITLE SECTION
+%----------------------------------------------------------------------------------------
 
-\author{Gabriel Barbosa Diniz\\1511211 \and Lucas Rodrigues\\1510848 \and Mateus Ribeiro de Castro\\1213068}
+\newcommand{\horrule}[1]{\rule{\linewidth}{#1}} % Create horizontal rule command with 1 argument of height
 
-\date{\today}
+\title{
+\normalfont \normalsize 
+\textsc{Período de 2017.1} \\
+\textsc{Prof. Marcus Vinicius S. Poggi de Aragão} \\
+\textsc{Pontifícia Universidade Católica do Rio de Janeiro} \\  [0.5cm] % Your university, school and/or department name(s)
+\horrule{1pt} \\  % Thin top horizontal rule
+\LARGE Estruturas Discretas - Segundo Trabalho \\ % The assignment title
+\horrule{2pt} \\ % Thick bottom horizontal rule
+}
+
+\author{
+\large Gabriel Barbosa Diniz \\
+\large 1511211 \and 
+\large Lucas Rodrigues \\ 
+\large 1510848 \and 
+\large Mateus Ribeiro de Castro \\ 
+\large 1213068 \\
+}
+
+\date{\scshape\normalsize\today} % Today's date or a custom date
 
 \begin{document}
-\maketitle
 
-\textbf{Observação$_1$}: Os códigos fontes dos algoritmos referentes aos teoremas provados seguirá em anexo em um arquivo Jupyter Notebook para melhor entendimento, compilação, execução, testes, etc.\\
+\maketitle % Print the title
 
-\textbf{Observação$_2$}: Os arquivos de entrada e saída (walk.in e walk.out) pedidos também estarão sendo enviados juntos, cumprindo as regras e exigências pedidas no trabalho.
+\textbf{Observação$_1$}: Os códigos fontes dos algoritmos referentes aos teoremas provados seguirá em anexo em um arquivo Jupyter Notebook para melhor entendimento, compilação, execução, testes, etc.
 
-\section{Primeira Questão (Teorema 1)}
+%----------------------------------------------------------------------------------------
+% PROBLEM 1
+%----------------------------------------------------------------------------------------
 
-\textbf{Teorema 1}: Sabe-se encontrar a árvore de peso máximo de $G=(V,E)$ que contém o vértice 1 e possui $K$ vértices.\\
+\section{Primeiro Teorema}
 
-Denomina-se $A_k$ a árvore obtida com certo valor de $k$. Denominamos $V_k$ e $E_k$ as listas de vértices e arestas, respectivamente, que compõem a árvore $A_k$.\\
+\paragraph{Enunciado do Teorema}: Sabe-se encontrar a árvore de peso máximo de $G=(V,E)$ que contém o vértice 1 e possui $K$ vértices.\\
+
+\begin{itemize}
+   \item Denomina-se $A_k$ a árvore obtida com certo valor de $k$.
+   \item Denomina-se $V_k$ e $E_k$ as listas de vértices e arestas, respectivamente, que compõem a árvore $A_k$.
+\end{itemize}
 
 \textbf{Caso Base}: Provando por indução simples em $K$, temos para o caso base $k=1$, e assim haverá somente o vértice $1$ e nenhuma aresta; o peso total será $0$. Esta é a única árvore possível de 1 vértice e que contém $v_1$. Está definida por $V_1 = \{v_1\}$ e $E_1 = \emptyset$.\\
 
@@ -44,148 +119,144 @@ Denomina-se $A_k$ a árvore obtida com certo valor de $k$. Denominamos $V_k$ e $
 
 \textbf{Passo Indutivo}: Considere o grafo $B_k$ formado pelos vértices pertencentes a $V - V_k$ e por todas as arestas formadas por vértices $(b_1, b_2) \in (V - V_k)$. Considere o conjunto $R$ de arestas do tipo $(a, b)$ em que $a \in A_k$ e $b \in B_k$. Necessariamente, $A_{k+1}$ tem seu conjunto de vértices definido por $V_k \cup \{b\}$ e seu conjunto de arestas definido por $E_k \cup \{(a, b)\}$. Determinando $a$ e $b$, portanto, determinamos inteiramente $A_{k+1}$, onde $a$ e $b$ são os vértices da aresta de maior peso entre as arestas $R$. Com isso, está determinado $A_{k+1}$.\\
 
-Com isso então podemos, através da prova indutiva resolvida derivar um algoritmo genérico que corresponde a prova deste teorema. Segue abaixo então o algoritmo em \textbf{pseudocódigo} e em seguida o algoritmo em \textbf{Python}:\\
+Com isso então podemos, através da prova indutiva resolvida derivar um algoritmo genérico que corresponde a prova deste teorema. Segue abaixo então o algoritmo em \emph{\textbf{python}}: \\
 
-\textbf{Implementação em Pseudocódigo - Algoritmo Genérico}:
+\begin{lstlisting}[language=Python, caption=Python algorithm]
+import numpy as np
 
-{\color{ogreen}
-\begin{verbatim}
-função t1(G, K)
-    se K == 1
-        retorna uma árvore contendo somente o vértice 1
+################################################################################
+#
+# Algoritmo que recebe uma matriz de adjascencias com os pesos das arestas
+#
+# OBS: Ao inves de usar varios parametros, procure usar o retorno multiplo,
+#      retornando o visited e a arvore. No caso, base tenta retornar uma matriz
+#      vazia com o visited incluindo o primeiro vertice.
+#
+################################################################################
 
-    A <- t1(G, K-1)
-    B <- grafo formado pelos vertices de G nao presentes em A, e por todas as arestas entre esses vertices
-    R <- arestas do tipo (a,b) onde ( pertence(a, A) && pertence(b, B))
+def HeavyTree(M,k):
 
-    new_edge <- elemento de R com maior peso
-    a, b <- vertices da aresta new_edge
+    n = len(M)
+    
+    if(k > n or k < 0):
+        print("K invalido")
+        return -1
+    
+    # Caso Base
+    if(k == 1):
+        visited = [0]
+        tree = np.zeros((n,n))
+        return tree, visited
+    
+    tree, visited = HeavyTree(M,k-1)
+    B = [] # Vertices vizinhos a vertices visitados
+    
+    for i in range(n):
+        if(i not in visited): # Aqui temos a avaliacao de todos os vertices
+            for j in visited: # nao visitados que sao vizinhos de vertices 
+                if(M[i,j] != 0 and j not in B): # visitados.
+                    B = B + [i]
+                    break
+    
+    biggest = 0
+    new_v = 0
+    old_v = 0
+    
+    for i in B:
+        #new = np.max(M[i])
+        for j in visited:
+            if (M[i,j] > biggest):
+                biggest = M[i,j]
+                new_v = i
+                old_v = j
+    
+    visited = visited + [new_v]
+    
+    #for i in range(n):
+    #    if(M[new_v,i] == biggest):
+    #        tree[i][new_v] = biggest
+    #        tree[new_v][i] = biggest
+    #        break
+    
+    tree[new_v][old_v] = biggest
+    tree[old_v][new_v] = biggest
+    
+    return tree, visited
+\end{lstlisting}
 
-    adiciona vertice (b) ao grafo (A)
-    adiciona aresta (a, b) ao grafo (A)
+\paragraph{Observação sobre o algoritmo realizado}: Por questão prática do algoritmo em si, podemos dizer que foi realizado como passo indutivo:
 
-    retorna A
-\end{verbatim}
-}
+\begin{itemize}
+   \item Procura-se $max(T(k))$.
+   \item Soma os pesos das arestas de maior peso de cada uma das folhas.
+   \item Para todos os nós, adicionam-se as arestas de maior peso com os vértices restantes, ou seja, $max(p_b t.q b \in (V - V_k))$.
+\end{itemize}
 
-\textbf{Implementação em Python - Algoritmo Específico}:
+Dessa forma, saberemos que adicionamos as arestas de maior peso, e à medida que se aumenta $k$ basta incluirmos mais arestas de maior peso. \\
 
-{\color{red}
-\begin{verbatim}
-from pygraph.classes.graph import graph
+\textbf{Testes do Algoritmo}: A tabela abaixo ilustra o tempo de execução do algoritmo para diferentes instâncias e com diferentes valores do parâmetro $k$. O tempo foi medido executando o algoritmo por 5 segundos e contando o número de execuções.
 
-def teo_1(g, k):
-  # Salvaguarda
-  if k > len(g.nodes()):
-    raise ValueError('FORBIDDEN: K > |V|')
-  if k <= 0:
-    raise ValueError('FORBIDDEN: K <= 0')
-
-  # Caso base
-  if k == 1:
-    tree = graph()
-    tree.add_node(1)
-    return tree
-
-  # Hipotese indutiva
-  tree = teo_1(g, k-1)
-
-  # V - V_k
-  all_nodes = g.nodes()
-  used_nodes = tree.nodes()
-  external_nodes = [node for node in all_nodes if node not in used_nodes]
-
-  # Conjunto F de arestas possiveis
-  r = []
-  for used_node in used_nodes:
-    for external_node in external_nodes:
-      if g.has_edge((used_node, external_node)):
-        r.append((used_node, external_node))
-
-  # Aresta de maior peso em F
-  new_edge = max(r, key=lambda e: g.edge_weight(e))
-
-  # V_{k+1} = V_k + {b}
-  a, b = new_edge
-  tree.add_node(b)
-
-  # E_{k+1} = E_k + {(a, b)}
-  tree.add_edge(new_edge)
-
-  return tree
-\end{verbatim}
-}
-
-\textbf{Testes do Algoritmo}: A tabela abaixo ilustra o tempo de execução do algoritmo, em milissegundos, para diferentes instâncias e com diferentes valores do parâmetro $k$. O tempo foi medido executando o algoritmo por 5 segundos e contando o número de execuções. A leitura do arquivo e criação da árvore que o representam não foram incluídos no loop.
-
-\begin{table}[H]
-\centering
-\begin{tabular}{l|l|l|l|l|l|l|l|l|l|l|l|l}
-entrada & $k=1$ & $k=2$ & $k=3$ & $k=5$ & $k=10$ & $k=15$ & $k=20$ & $k=30$ & $k=40$ & $k=50$ & $k=|V|$ \\\hline
-ulysses16 & 0.003 & 0.031 & 0.069 & 0.184 & 0.554 & 0.979 & -- & -- & -- & -- & 0.989 \\
-ulysses22 & 0.004 & 0.037 & 0.113 & 0.261 & 0.890 & 1.74 & 2.12 & -- & -- & -- & 2.16 \\
-bays29 & 0.004 & 0.048 & 0.121 & 0.339 & 1.27 & 2.53 & 4.26 & -- & -- & -- & 5.71 \\
-eil51 & 0.004 & 0.074 & 0.194 & 0.587 & 2.38 & 5.10 & 8.60 & 16.2 & 26.4 & 33.1 & 33.3 \\
-eil51 & 0.004 & 0.074 & 0.194 & 0.587 & 2.38 & 5.10 & 8.60 & 16.2 & 26.4 & 33.1 & 33.3 \\
-bier127 & 0.006 & 0.171 & 0.489 & 1.81 & 9.20 & 23.6 & 40.0 & 85.6 & 147.7 & 206.4 & 680.2 \\
-lin318 & 0.006 & 0.386 & 1.13 & 3.77 & 17.1 & 51.8 & 116 & 266 & 467 & 722 & 9837 \\
-\end{tabular}
-\end{table}
-
-\textbf{Observação$_3$}: No anexo enviado estão figuras que ilustram o passo-a-passo dos vértices e arestas escolhidos em cada etapa do algoritmo quando aplicado na instância ulysses16.
-
-\subsection{Primeira Questão (Teorema 1 - BÔNUS)}
-
-\textbf{Teorema 1 - BÔNUS}: Sabe-se encontrar a floresta de peso mínimo de de $G=(V,E)$ onde os componentes conexos possuem pelo menos $K$ vértices.\\
-
-\textbf{Caso Base}: Por indução simples em $k$. Para o caso base $k = 1$, a floresta $F_1$ conterá todos os vértices de $V$, porém nenhuma aresta. Assim, haverá $|V|$ componentes conexas e a soma dos pesos será mínima.\\
-
-\textbf{Hipótese Indutiva}: Pela hipótese indutiva, temos que o teorema é válido para $k$ vértices e desejamos provar, portanto, que é válido também para $k+1$ vértices. Podemos definir componente conexo como qualquer árvore $A=(V',E')$ tal que $V'\subset V$, $E'\subset E$ e $|E'|>0$. Pela hipótese indutiva, um componente conexo de $F_k$ possuirá pelo menos $k$ vértices.\\
-
-\textbf{Passo Indutivo}: Sendo assim, o único modo de garantir que este componente passe a conter pelo menos $k+1$ vértices é adicionando um novo vértice a este componente. Então, enquanto houverem componentes conexos em $F_{k+1}$ com número de vértices menores que $k+1$, devemos, do conjunto de arestas de $G$ ainda não utilizadas em $F_{k+1}$ (\textit{i.e.,} $S_k=E-E_{k+1}$), para um componente conexo A de $F_{k+1}$, escolher a aresta de menor peso $s=(v_1,v_2)\in S_k$ tal que $v_1 \in A$ e $v_2 \notin A$. Após a inclusão dessa aresta, o conjunto de componentes conexos deve ser re-avaliado. Desta maneira, todo componente conexo contará com pelo menos $k+1$ vértices e, assim, obteremos $F_{k+1}$, provando o teorema.\\
-
-O algoritmo derivado desta prova indutiva é conhecido como \textit{Algoritmo de Borůvka} e é utilizado para se obter a Árvore Geradora Mínima de grafos ponderados cujos pesos das arestas são distintos. Segue abaixo então o algoritmo em \textbf{pseudocódigo} e em seguida o algoritmo em \textbf{Python}:\\
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+% COLOCAR TABELA 
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
 
 \pagebreak
 
-\textbf{Implementação em Pseudocódigo - Algoritmo Genérico}:
+%------------------------------------------------
 
-{\color{ogreen}
-\begin{verbatim}
-função t2(V, E, K)
-    se K == 1
-        retorna uma floresta contendo todos os vértices, mas nenhuma aresta
+\subsection{Teorema Bônus}
 
-    F <- t2(V, E, K-1)
+\paragraph{Enunciado do Teorema Bônus}: Sabe-se encontrar a floresta de peso mínimo de de $G=(V,E)$ onde os componentes conexos possuem pelo menos $k$ vértices. \\
 
-    enquanto houver componente conexa de F com |vertices| < K
-        C <- uma componente conexa qualquer de F
-        E <- aresta mínima qualquer que não pertence a F com um vértice em F
-        adicionar E a F, inclusive seu vértice que não estava em F
+\textbf{Caso Base}: Por indução simples em $k$. Para o caso base $k = 1$, a floresta $F_1$ conterá todos os vértices de $V$, porém nenhuma aresta. Assim, haverá $|V|$ componentes conexas e a soma dos pesos será mínima. \\
 
-    retorna F
-\end{verbatim}
-}
+\textbf{Hipótese Indutiva}: Pela hipótese indutiva, temos que o teorema é válido para $k$ vértices e desejamos provar, portanto, que é válido também para $k+1$ vértices. Podemos definir componente conexo como qualquer árvore $A=(V',E')$ tal que $V'\subset V$, $E'\subset E$ e $|E'|>0$. Pela hipótese indutiva, um componente conexo de $F_k$ possuirá pelo menos $k$ vértices. \\
 
-\textbf{Implementação em Python - Algoritmo Específico}:
+\textbf{Passo Indutivo}: Sendo assim, o único modo de garantir que este componente passe a conter pelo menos $k+1$ vértices é adicionando um novo vértice a este componente. Então, enquanto houverem componentes conexos em $F_{k+1}$ com número de vértices menores que $k+1$, devemos, do conjunto de arestas de $G$ ainda não utilizadas em $F_{k+1}$ (\textit{i.e.,} $S_k=E-E_{k+1}$), para um componente conexo A de $F_{k+1}$, escolher a aresta de menor peso $s=(v_1,v_2)\in S_k$ tal que $v_1 \in A$ e $v_2 \notin A$. Após a inclusão dessa aresta, o conjunto de componentes conexos deve ser re-avaliado. Desta maneira, todo componente conexo contará com pelo menos $k+1$ vértices e, assim, obteremos $F_{k+1}$, provando o teorema. \\
 
-{\color{blue}
-\begin{verbatim}
+O algoritmo derivado desta prova indutiva é conhecido como \emph{\textbf{Algoritmo de Borůvka}} e é utilizado para se obter a Árvore Geradora Mínima de grafos ponderados cujos pesos das arestas são distintos. Segue abaixo o algoritmo em \emph{\textbf{Python}}:\\
+
+\begin{lstlisting}[language=Python, caption=Python algorithm]
 from pygraph.classes.graph import graph
 from pygraph.algorithms.accessibility import connected_components
 
 def teo_2(g, k):
+  
   # Salvaguarda
   if k > len(g.nodes()):
     raise ValueError('FORBIDDEN: K > |V|')
+  
   if k <= 0:
     raise ValueError('FORBIDDEN: K <= 0')
 
   # Caso base
   if k == 1:
     forest = graph()
+  
     for node in g.nodes():
       forest.add_node(node)
+  
     return forest
 
   # Hipotese indutiva
@@ -193,6 +264,7 @@ def teo_2(g, k):
 
   # Enquanto ainda houverem componentes conexos
   # que nao satisfazem a condicao
+  
   while True:
     # Atualiza a lista de componentes, pois pode ter
     # mudado durante a adicao
@@ -224,22 +296,23 @@ def teo_2(g, k):
 
 
 def _transform_cc(cc):
-  """
-  The "connected components" structure returned
-  by the function in pygraph is a dict mapping each
-  node to an id.
-  We'll make a new structure which is a list of lists
-  of nodes that are in the same connected component.
-  """
+  
   inv_map = {}
+  
   for k, v in cc.iteritems():
     inv_map[v] = inv_map.get(v, [])
     inv_map[v].append(k)
+  
   return inv_map.values()
-\end{verbatim}
-}
+\end{lstlisting}
 
-\textbf{Testes do Algoritmo}: A tabela abaixo ilustra o tempo de execução do algoritmo, em milissegundos, para diferentes instâncias e com diferentes valores do parâmetro $k$. O tempo foi medido executando o algoritmo por 5 segundos e contando o número de execuções. A leitura do arquivo e criação da árvore que o representam não foram incluídos no loop.
+\textbf{Testes do Algoritmo}: A tabela abaixo ilustra o tempo de execução do algoritmo, em milissegundos, para diferentes instâncias e com diferentes valores do parâmetro $k$. 
+
+\begin{itemize}
+   \item O tempo foi medido executando o algoritmo por 5 segundos e contando o número de execuções.
+\end{itemize}
+
+\paragraph{Observação sobre os testes}: No anexo enviado estão figuras que ilustram o passo-a-passo dos vértices e arestas escolhidos em cada etapa do algoritmo quando aplicado na instância ulysses16.
 
 \begin{table}[H]
 \centering
@@ -254,133 +327,6 @@ bier127 & 0.06 & 1861 & 3127 & 3917 & 6735 & 8142 & 10210 & 10352 & 10996 & 1307
 \end{tabular}
 \end{table}
 
-\textbf{Observação$_3.1$}: No anexo enviado estão figuras que ilustram o passo-a-passo dos vértices e arestas escolhidos em cada etapa do algoritmo quando aplicado na instância ulysses16.
-
-\pagebreak
-
-\section{Segunda Questão (Teorema 2)}
-
-\textbf{Teorema 2} ($i$,$j$,$q$): Sabe-se determinar o prêmio máximo que o rei consegue coletar saindo da posição $(i,j)$ e consumindo $q$ unidades.\\
-
-Vamos considerar um desarrolamento da matriz em 64 vértices distintos, com $v_1$ correspondente a $(1,1)$, $v_2$ a $(1,2)$, assim por diante. Os conceitos de vizinhança continuam valendo: $v_1$ tem como vizinhos $\{v_2, v_9, v_10\}$.\\
-
-Considere, também, uma tabela cujas linhas correspondem aos vértices $v$, e as colunas ao custo $q$ restante a ser utilizado. As células da tabela serão preenchidas com o prêmio máximo $P_{max}(v_{ij},q)$, que se consegue a partir de um trajeto que inicie no vértice $v_{ij}$ e que consuma $q$ unidades.\\
-
-\textbf{Caso Base}: Por indução em $q$, temos o caso base para $q = 0$, preencheremos a primeira coluna da tabela. Neste caso, não existem unidades para consumir, logo não poderemos sair da origem $(i,j)$. Sendo assim, o prêmio máximo para ir até $(i,j)$ será zero e para qualquer outro vértice será $-\infty$ (que representa a impossibilidade).\\
-
-\textbf{Hipótese Indutiva}: Como hipótese indutiva, temos que o teorema é válido para $0 \leq q \leq Q$, portanto queremos provar que o teorema também é válido para $Q+1$.\\
-
-\textbf{Passo Indutivo}: Neste caso, para cada um dos vértices $v$, devemos encontrar o prêmio máximo que pode ser obtido chegando a $v$ consumindo $Q+1$ unidades. Logo, podemos observar que, para que a condição acima seja satisfeita, no instante imediatamente anterior à chegada em $v$, estaríamos em um vértice $v_n$, vizinho de $v$, com $Q+1-q_v$ unidades consumidas, sendo $q_v$ o custo associado ao vértice $v$. Visto que o prêmio $p_v$ associado ao vértice $v$ é constante, devemos escolher $v_n$ de maneira que $P_{max}(v_n,Q+1-q_v)$ seja máximo, garantindo, assim, que $P_{max}(v,Q+1) = p_v + P_{max}(v_n,Q+1-q_v)$ também seja máximo. Vale ressaltar que, caso $Q+1-q_v < 0$, teremos que $P_{max}(v_n,Q+1-q_v) = -\infty$, uma vez que é impossivel chegar a qualquer vértice consumindo um custo total menor que zero.
-
-E assim então podemos, através da prova indutiva resolvida, podemos derivar um algoritmo genérico que corresponde a prova deste teorema. Segue abaixo então o algoritmo em \textbf{pseudocódigo} e em seguida o algoritmo em \textbf{Python}:\\
-
-\textbf{Implementação em Pseudocódigo - Algoritmo Genérico}:
-
-{\color{ogreen}
-\begin{verbatim}
-função caminhoDePremioMax(v, q)
-    se q é zero
-        se v é origem
-            return caminho({v})
-        caso contrario
-            return "caminho impossivel"
-
-    se q < 0
-        return "caminho impossivel"
-
-    Vn \(\Leftarrow\) conjunto de vizinhos de v
-    caminho \(\Leftarrow\) maxPremio\{ caminhoDePremioMax( vn \(\in\) Vn, q-custo(v) )
-    caminho.adicionaAoFinal(v)
-    return caminho
-\end{verbatim}
-}
-
-\pagebreak
-
-\textbf{Implementação em Python - Algoritmo Específico}:
-
-{\color{red}
-\begin{verbatim}
-def teo_3(pos, costs, rewards, energy):
-  # Salvaguarda
-  if pos < 0 or pos >= 64 or energy < 0:
-    raise ValueError("Invalid position/energy!!")
-
-  # Dict cujas chaves sao tuplas (posicao, energia) e cujos valores
-  # sao tuplas contendo o premio maximo que o rei consegue coletar
-  # comecando da posicao dada, com dada energia disponivel, e parando na
-  # posicao 0 com 0 energia, e o caminho para tal
-  memo = {}
-
-  # Caso base -- q=0
-  memo[(0, 0)] = (0, [0])
-  for v in range(1, 64):
-    memo[(v, 0)] = None
-
-  # Hipotese indutiva e passo indutivo -- preencher a tabela
-  # Para cada coluna de energia
-  for q in range(1, energy+1):
-    # Para cada vertice nessa coluna
-    for v in range(64):
-      # custo_vizinho e a coluna em que vamos olhar
-      custo_vizinho = q - costs[v]
-      vizinhos = find_neighbors(v)
-      if custo_vizinho < 0:
-        memo[(v, q)] = None
-      else:
-        # Filtra as celulas -- somente se nao for impossivel (not None)
-        # e pega a tupla (premio, caminho) delas
-        tuplas = [memo[(vizinho, custo_vizinho)] for vizinho in vizinhos if not memo[(vizinho, custo_vizinho)] == None]
-        if len(tuplas) > 0:
-          # O melhor_vizinho e o que tem maior premio
-          melhor_vizinho = max(tuplas, key=lambda x: x[0])
-          # O novo_premio e o premio do melhor vizinho somado ao do vertice em questao
-          novo_premio = melhor_vizinho[0] + rewards[v]
-          # O novo_caminho e o caminho do melhor vizinho acrescido do vertice em questao
-          novo_caminho = melhor_vizinho[1][:] + [v]
-          memo[(v, q)] = (novo_premio, novo_caminho)
-        else:
-          memo[(v, q)] = None
-
-  # Com a tabela em maos, vamos encontrar o caminho comecando em 0
-  # que obtenha o maior premio possivel, utilizando qualquer quantidade
-  # de energia menor que a fornecida
-  maior = 0
-  for q in range(energy, -1, -1):
-    x = memo[(0, q)]
-    if x != None and x[0] > maior:
-      maior = x[0]
-      inst = x + (q,)
-  return inst
-
-
-def find_neighbors(pos):
-  x = pos/8
-  y = pos%8
-
-  naive = [(x-1, y-1), (x-1, y), (x-1, y+1),
-           (x,   y-1),           (x,   y+1),
-           (x+1, y-1), (x+1, y), (x+1, y+1)]
-  filtered = [n for n in naive if n[0]>=0 and n[1]>=0 and n[0]<8 and n[1]<8]
-
-  return map(lambda pos: pos[0]*8+pos[1], filtered)
-\end{verbatim}
-}
-
-\textbf{Testes do Algoritmo}: Os testes se encontram no arquivo Jupyter Notebook juntamente com o tempo de execução. Os testes foram realizados com instâncias pré-definidas que se encontram no arquivo $walk.in$. Os resultados encontram-se abaixo em uma tabela para melhor visualização. Segue também em anexo o arquivo walk.out.
-
-\begin{table}[H]
-\centering
-\begin{tabular}{l|l|l|l|l|p{4cm}}
-Instância & Tempo & Prêmio Obtido & Energia Utilizada & Energia Disponível & Caminho Encontrado\\\hline
-1ª & 3.70ms & 16 & 8 & 8 & 0 1 0 1 0 1 0 1 0\\
-2ª & 3.52ms & 16 & 8 & 8 & 0 1 0 1 0 1 0 1 0\\
-3ª & 3.97ms & 16 & 8 & 8 & 0 1 0 1 0 1 0 1 0\\
-4ª & 14.22ms & 284 & 22 & 22 & 0 9 18 27 36 44 52 60 52 60 52 60 52 60 52 60 52 44 36 27 18 9 0\\
-5ª & 9.28ms & 57 & 18 & 18 & 0 8 16 25 16 25 16 25 16 25 16 25 16 25 16 25 16 8 0
-\end{tabular}
-\end{table}
-
-\section{Terceira Questão (Teorema 3)}
+%----------------------------------------------------------------------------------------
 
 \end{document}
