--- a/Segundo Trabalho/docs/RELATORIO.tex
+++ b/Segundo Trabalho/docs/RELATORIO.tex
@@ -241,7 +241,7 @@ O algoritmo derivado desta prova indutiva é conhecido como \emph{\textbf{Algori
 from pygraph.classes.graph import graph
 from pygraph.algorithms.accessibility import connected_components
 
-def teo_2(g, k):
+def ForestTheorem(g, k):
   
   # Salvaguarda
   if k > len(g.nodes()):
@@ -260,7 +260,7 @@ def teo_2(g, k):
     return forest
 
   # Hipotese indutiva
-  forest = teo_2(g, k-1)
+  forest = ForestTheorem(g, k-1)
 
   # Enquanto ainda houverem componentes conexos
   # que nao satisfazem a condicao
@@ -326,6 +326,149 @@ eil76 & 0.03 & 284 & 393 & 539 & 610 & 770 & 818 & 855 & 861 & 865 \\
 bier127 & 0.06 & 1861 & 3127 & 3917 & 6735 & 8142 & 10210 & 10352 & 10996 & 13077
 \end{tabular}
 \end{table}
+
+%----------------------------------------------------------------------------------------
+% PROBLEM 2
+%----------------------------------------------------------------------------------------
+
+\section{Segundo Teorema}
+
+\paragraph{Enunciado do Teorema}($i$,$j$,$q$): Sabe-se determinar o prêmio máximo que o rei consegue coletar saindo da posição $(i,j)$ e consumindo $q$ unidades.
+
+\begin{itemize}
+   \item Vamos considerar um desarrolamento da matriz em 64 vértices distintos, com $v_1$ correspondente a $(1,1)$, $v_2$ a $(1,2)$, assim por diante. Os conceitos de vizinhança continuam valendo: $v_1$ tem como vizinhos $\{v_2, v_9, v_10\}$.
+   \item Considere, também, uma tabela cujas linhas correspondem aos vértices $v$, e as colunas ao custo $q$ restante a ser utilizado. As células da tabela serão preenchidas com o prêmio máximo $P_{max}(v_{ij},q)$, que se consegue a partir de um trajeto que inicie no vértice $v_{ij}$ e que consuma $q$ unidades.
+\end{itemize}
+
+\textbf{Caso Base}: Por indução em $q$, temos o caso base para $q = 0$, preencheremos a primeira coluna da tabela. Neste caso, não existem unidades para consumir, logo não poderemos sair da origem $(i,j)$. Sendo assim, o prêmio máximo para ir até $(i,j)$ será zero e para qualquer outro vértice será $-\infty$ (que representa a impossibilidade). \\
+
+\textbf{Hipótese Indutiva}: Como hipótese indutiva, temos que o teorema é válido para $0 \leq q \leq Q$, portanto queremos provar que o teorema também é válido para $Q+1$. \\
+
+\textbf{Passo Indutivo}: Neste caso, para cada um dos vértices $v$, devemos encontrar o prêmio máximo que pode ser obtido chegando a $v$ consumindo $Q+1$ unidades. Logo, podemos observar que, para que a condição acima seja satisfeita, no instante imediatamente anterior à chegada em $v$, estaríamos em um vértice $v_n$, vizinho de $v$, com $Q+1-q_v$ unidades consumidas, sendo $q_v$ o custo associado ao vértice $v$. Visto que o prêmio $p_v$ associado ao vértice $v$ é constante, devemos escolher $v_n$ de maneira que $P_{max}(v_n,Q+1-q_v)$ seja máximo, garantindo, assim, que $P_{max}(v,Q+1) = p_v + P_{max}(v_n,Q+1-q_v)$ também seja máximo. Vale ressaltar que, caso $Q+1-q_v < 0$, teremos que $P_{max}(v_n,Q+1-q_v) = -\infty$, uma vez que é impossivel chegar a qualquer vértice consumindo um custo total menor que zero. \\
+
+E assim então, através da prova indutiva resolvida, podemos derivar um algoritmo genérico que corresponde a prova deste teorema. Segue abaixo o algoritmo em \emph{\textbf{Python}}:\\
+
+
+\pagebreak
+
+%----------------------------------------------------------------------------------------
+% PROBLEM 3
+%----------------------------------------------------------------------------------------
+
+\section{Algoritmo de Busca de uma \emph{String} em Textos}
+
+\paragraph{Enunciado do Problema}: Considerando um texto definido pelo vetor de caracteres $T[1..n]$, deseja-se determinar todas as ocorrêcias da \emph{string} $s[1..m]$ em $T$. 
+
+\begin{itemize}
+   \item O algoritmo correspondente que possui este objetivo e que atenda à condição de "encontrar as ocorrências da string $s$ exatamente como especificado" segue abaixo em \emph{\textbf{Python}}:
+\end{itemize}
+
+\begin{lstlisting}[language=Python, caption=String Python Algorithm]
+def Transform(string):
+    n = len(string)
+    for i in range(n):
+        if(maiuscula(string[i])):
+            string[i] = chr(ord(string[i]) + 32)
+    return string
+
+def FindWord (text, word):
+    i = 0
+    j = 0
+    f = len(text)
+    n = len(word)
+    letra = text[i]
+    instances = []
+    start = 0
+    end = 0
+    in_string = 0
+    while(i<f):
+        if(letra == word[0] and in_string == 0):
+            j = 0
+            start = i
+            end = i
+            in_string = 1
+        if(in_string == 1 and letra != word[j]):
+            in_string = 0
+            start = 0
+            end = 0
+            j = 0            
+        if(in_string == 1 and letra == word[j] and j != (n-1)):
+            j = j + 1
+            end = end + 1   
+        if(in_string == 1 and letra == word[j] and j == (n-1)):
+            instances = instances + [[start,end]]
+            start = 0
+            end = 0
+            in_string = 0
+        if(i == (f-1)):
+            break
+        i = i + 1
+        letra = text[i]
+    return instances
+\end{lstlisting}
+
+\begin{itemize}
+   \item O algoritmo correspondente que possui este objetivo e que atenda à condição de "permitir alternativas entre elementos de $s$, como por exemplo, maiúsculas e minúsculas serem equivalentes" segue abaixo em \emph{\textbf{Python}}:
+\end{itemize}
+
+\begin{lstlisting}[language=Python, caption=String Python Algorithm]
+def Transform(string):
+    n = len(string)
+    for i in range(n):
+        if(maiuscula(string[i])):
+            string[i] = chr(ord(string[i]) + 32)
+    return string
+
+def FindWordEq (text, word):
+    text = Transform(text)
+    word = Transform(word)
+    i = 0
+    j = 0
+    f = len(text)
+    n = len(word)
+    letra = text[i]
+    instances = []
+    start = 0
+    end = 0
+    in_string = 0
+    while(i<f):
+        if(letra == word[0] and in_string == 0):
+            j = 0
+            start = i
+            end = i
+            in_string = 1
+        if(in_string == 1 and letra != word[j]):
+            in_string = 0
+            start = 0
+            end = 0
+            j = 0            
+        if(in_string == 1 and letra == word[j] and j != (n-1)):
+            j = j + 1
+            end = end + 1   
+        if(in_string == 1 and letra == word[j] and j == (n-1)):
+            instances = instances + [[start,end]]
+            start = 0
+            end = 0
+            in_string = 0
+        if(i == (f-1)):
+            break
+        i = i + 1
+        letra = text[i]
+    return instances
+\end{lstlisting}
+
+\begin{itemize}
+   \item O algoritmo correspondente que possui este objetivo e que atenda à condição de "encontrar as ocorrências de $s$ que deixam de verificar até um dos seus elementos" segue abaixo em \emph{\textbf{Python}}:
+\end{itemize}
+
+\begin{lstlisting}[language=Python, caption=String Python Algorithm]
+def Transform(string):
+    n = len(string)
+    for i in range(n):
+        if(maiuscula(string[i])):
+            string[i] = chr(ord(string[i]) + 32)
+    return string
+\end{lstlisting}
 
 %----------------------------------------------------------------------------------------
 
