--- a/Segundo Trabalho/src/[INF1631] Segundo Trabalho - Estruturas Discretas.ipynb
+++ b/Segundo Trabalho/src/[INF1631] Segundo Trabalho - Estruturas Discretas.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,8 @@
      "output_type": "stream",
      "text": [
       "[[1, 2]]\n",
-      "[[1, 2], [5, 6], [7, 8]]\n"
+      "[[1, 2], [6, 7], [8, 9]]\n",
+      "[[1, 2]]\n"
      ]
     }
    ],
@@ -275,10 +276,15 @@
     "            end = i\n",
     "            in_string = 1\n",
     "        if(in_string == 1 and letra != word[j]):\n",
-    "            in_string = 0\n",
-    "            start = 0\n",
-    "            end = 0\n",
-    "            j = 0            \n",
+    "            if(letra == word[0]):\n",
+    "                j = 0\n",
+    "                start = i\n",
+    "                end = i\n",
+    "            else:\n",
+    "                in_string = 0\n",
+    "                start = 0\n",
+    "                end = 0\n",
+    "                j = 0  \n",
     "        if(in_string == 1 and letra == word[j] and j != (n-1)):\n",
     "            j = j + 1\n",
     "            end = end + 1   \n",
@@ -313,10 +319,15 @@
     "            end = i\n",
     "            in_string = 1\n",
     "        if(in_string == 1 and letra != word[j]):\n",
-    "            in_string = 0\n",
-    "            start = 0\n",
-    "            end = 0\n",
-    "            j = 0            \n",
+    "            if(letra == word[0]):\n",
+    "                j = 0\n",
+    "                start = i\n",
+    "                end = i\n",
+    "            else:\n",
+    "                in_string = 0\n",
+    "                start = 0\n",
+    "                end = 0\n",
+    "                j = 0            \n",
     "        if(in_string == 1 and letra == word[j] and j != (n-1)):\n",
     "            j = j + 1\n",
     "            end = end + 1   \n",
@@ -331,12 +342,73 @@
     "        letra = text[i]\n",
     "    return instances\n",
     "\n",
-    "text = ['a','B','c','d','e','b','c','b','c','e','c']\n",
+    "def FindWordError (text, word):\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    error = 0\n",
+    "    f = len(text)\n",
+    "    n = len(word)\n",
+    "    letra = text[i]\n",
+    "    instances = []\n",
+    "    start = 0\n",
+    "    end = 0\n",
+    "    in_string = 0\n",
+    "    while(i<f):\n",
+    "        if(letra == word[0] and in_string == 0):\n",
+    "            j = 0\n",
+    "            start = i\n",
+    "            end = i\n",
+    "            in_string = 1\n",
+    "            error = 0\n",
+    "        if(in_string == 1):\n",
+    "            if(letra != word[j] and error == 1):\n",
+    "                if(letra == word[0]):\n",
+    "                    j = 0\n",
+    "                    start = i\n",
+    "                    end = i\n",
+    "                    error = 0\n",
+    "                    in_string = 1\n",
+    "                else:\n",
+    "                    in_string = 1\n",
+    "                    start = i\n",
+    "                    end = i\n",
+    "                    j = 0\n",
+    "                    error = 1\n",
+    "            elif(letra == word[j] and j == (n-1)):\n",
+    "                instances = instances + [[start,end]]\n",
+    "                start = 0\n",
+    "                end = 0\n",
+    "                error = 0\n",
+    "                in_string = 0\n",
+    "            elif(letra == word[j] and j != (n-1)):\n",
+    "                j = j + 1\n",
+    "                end = end + 1\n",
+    "            elif(letra != word[j] and error == 0 and j < (n-1)):\n",
+    "                j = j + 1\n",
+    "                end = end + 1\n",
+    "                error = 1\n",
+    "        if(i == (f-1)):\n",
+    "            break\n",
+    "        i = i + 1\n",
+    "        letra = text[i]\n",
+    "    return instances\n",
+    "\n",
+    "text = ['a','B','c','d','e','b','b','c','b','c','e','c']\n",
     "word = ['B','c']\n",
     "\n",
     "instances = FindWord(text,word)\n",
     "print(instances)\n",
+    "\n",
+    "text = ['a','B','c','d','e','b','b','c','b','c','e','c']\n",
+    "word = ['B','c']\n",
+    "\n",
     "instances = FindWordEq(text,word)\n",
+    "print(instances)\n",
+    "\n",
+    "text = ['a','B','c','d','e','b','c','b','c','e','c']\n",
+    "word = ['B','c']\n",
+    "\n",
+    "instances = FindWordError(text,word)\n",
     "print(instances)"
    ]
   }
